[tool.poetry]
name = "ueosio"
version = "0.2.5"
description = "uEOSIO python library"
authors = ["Matias Romeo <matias.romeo@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/EOSArgentina/ueosio"
repository = "https://github.com/EOSArgentina/ueosio"

[tool.poetry.dependencies]
python = "^3.6"
cryptos = "^1.36"
base58 = "^2.0.0"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
